kubernetes/neo/apps/database/cloudnative-pg/cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  annotations:
    #external-dns.alpha.kubernetes.io/hostname: postgres.devbu.io
    metallb.universe.tf/loadBalancerIPs: ${METALLB_CNPG_V6ADDR},${METALLB_CNPG_V4ADDR}
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/cluster: postgres16
    cnpg.io/instanceRole: primary
